@@ -1,3 +1,5 @@
+* Allow no delivery time on product supplier
+
 Version 2.6.0 - 2012-10-22
 * Bug fixes (see mercurial logs for details)
 * Manage negative amount in purchase
